Overlap fix 5

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,8 @@ body {
   color: #fff;
   display: flex;
   justify-content: center;
-  align-items: center;
-  padding: 5px;
+  align-items: flex-start;
+  padding: 10px 5px;
   height: 100vh;
   overflow: hidden;
 }
@@ -25,7 +25,7 @@ body {
   width: 100%;
   position: relative;
   transform-origin: center top;
-  transform: scale(min(1, calc(100vh / 900px)));
+  transform: scale(min(1, calc(100vh / 1000px)));
 }
 
 h1 {
